RESOLVED FIXED 201947
Stop calling WTF::initializeMainThread() in JSGlobalContextCreate*()
https://bugs.webkit.org/show_bug.cgi?id=201947
Summary Stop calling WTF::initializeMainThread() in JSGlobalContextCreate*()
Chris Dumez
Reported 2019-09-18 15:02:46 PDT
Stop calling WTF::initializeMainThread() in JSGlobalContextCreate*(). I started doing so in <https://trac.webkit.org/changeset/248533> but it is causing crashes for apps using this JS API on background threads. It is also no longer necessary as of <https://trac.webkit.org/changeset/249064>.
Attachments
Patch (2.15 KB, patch)
2019-09-18 15:04 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-18 15:03:04 PDT
Chris Dumez
Comment 2 2019-09-18 15:04:47 PDT
Mark Lam
Comment 3 2019-09-18 15:08:30 PDT
Comment on attachment 379077 [details] Patch r=me if bots are green.
Chris Dumez
Comment 4 2019-09-18 15:56:23 PDT
Comment on attachment 379077 [details] Patch Clearing flags on attachment: 379077 Committed r250062: <https://trac.webkit.org/changeset/250062>
Chris Dumez
Comment 5 2019-09-18 15:56:26 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 6 2019-09-18 16:23:41 PDT
FYI, I am looking into writing an API test for this, to avoid this happening again in the future.
Note You need to log in before you can comment on or make changes to this bug.