Stop calling WTF::initializeMainThread() in JSGlobalContextCreate*() https://bugs.webkit.org/show_bug.cgi?id=201947 <rdar://problem/55453612>

Reviewed by Mark Lam.

Stop calling WTF::initializeMainThread() in JSGlobalContextCreate*(). I started doing so in <https://trac.webkit.org/changeset/248533>
but it is causing crashes for apps using this JS API on background threads. It is also no longer necessary as of
<https://trac.webkit.org/changeset/249064>.

* API/JSContextRef.cpp:
(JSContextGroupCreate):
(JSGlobalContextCreate):
(JSGlobalContextCreateInGroup):

Canonical link: https://commits.webkit.org/215587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250062 268f45cc-cd09-0410-ab3c-d52691b4dbfc