Source/JavaScriptCore/API/JSContextRef.cpp
@@ -68,7 +68,6 @@ using namespace JSC;
 
 JSContextGroupRef JSContextGroupCreate()
 {
-    WTF::initializeMainThread();
     initializeThreading();
     return toRef(&VM::createContextGroup().leakRef());
 }
@@ -119,7 +118,6 @@ void JSContextGroupClearExecutionTimeLimit(JSContextGroupRef group)
 
 JSGlobalContextRef JSGlobalContextCreate(JSClassRef globalObjectClass)
 {
-    WTF::initializeMainThread();
     initializeThreading();
 
 #if OS(DARWIN)
@@ -135,7 +133,6 @@ JSGlobalContextRef JSGlobalContextCreate(JSClassRef globalObjectClass)
 
 JSGlobalContextRef JSGlobalContextCreateInGroup(JSContextGroupRef group, JSClassRef globalObjectClass)
 {
-    WTF::initializeMainThread();
     initializeThreading();
 
     Ref<VM> vm = group ? Ref<VM>(*toJS(group)) : VM::createContextGroup();
